--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -4,10 +4,7 @@
     "outDir": "../out-tsc/e2e",
     "module": "commonjs",
     "target": "es5",
-    "types": [
-      "jasmine",
-      "jasminewd2",
-      "node"
-    ]
+    "skipLibCheck": true,
+    "types": ["jasmine", "jasminewd2", "node"]
   }
 }
